--- a/src/pages/user.pug
+++ b/src/pages/user.pug
@@ -16,7 +16,7 @@
             p.profile__subtitle Phone  
             p #{phone}
         .form__btns.flex-form
-            button.btn__main 
+            button.btn__main(type='submit')  
                 a.link-btn(href='/edituser') Edit profile
             button.btn__secondary 
                 a.link(href='/chats') Back to chats
