--- a/src/pages/edituser.pug
+++ b/src/pages/edituser.pug
@@ -4,21 +4,21 @@
         form.form__content.form__content-large.flex-center.mb-m
             .form__group
                 label.form__label(for='email') E-mail
-                input#email.form__input(type='email', value=`${email}`, required)
+                input#email.form__input(type='email', name='email', value=`${email}`, required)
             .form__group
                 label.form__label(for='text') Login
-                input#login.form__input(type='text', value=`${login}`, required)
+                input#login.form__input(type='text', name='login', value=`${login}`, required)
             .form__group
                 label.form__label(for='text') Name
-                input#login.form__input(type='text', value=`${first_name}`, required)
+                input#login.form__input(type='text', name='first_name', value=`${first_name}`, required)
             .form__group
                 label.form__label(for='text') Last name
-                input#login.form__input(type='text', value=`${second_name}`, required)
+                input#login.form__input(type='text', name='second_name', value=`${second_name}`, required)
             .form__group
                 label.form__label(for='phone') Phone
-                input#phone.form__input(type='tel', value=`${phone}`, required, maxlength='11', minlength='11')       
+                input#phone.form__input(type='tel', name='phone', value=`${phone}`, required, maxlength='11', minlength='11')       
         .form__btns.flex-form 
-            button.btn__main 
+            button.btn__main(type='submit') 
                 a.link-btn(href='/user') Save
             button.btn__secondary 
                 a.link(href='/chats') Back to chats
