sprint_2 first commit

--- a/src/components/button/btn.pug
+++ b/src/components/button/btn.pug
@@ -1,4 +1,2 @@
-style
-    include btn.scss
-button.btn__main 
-    a.link-btn(href=`/${route}`) #{value}
+a(class=`link__${linkColor}` href=`/${route}`) #{value}
+span.material-symbols-outlined  #{icon} 
