--- a/src/components/button/btn.pug
+++ b/src/components/button/btn.pug
@@ -1,2 +1,2 @@
-a(class=`link__${linkColor}` href=`/${route}`) #{value}
 span.material-symbols-outlined  #{icon} 
+a(class=`link__${linkColor}`) #{value}
