--- a/src/components/chats/chats.pug
+++ b/src/components/chats/chats.pug
@@ -1,1 +1,1 @@
-.container__chats #{'!{sectionSelection}'} #{'!{sectionView}'}
+.container__chats #{'!{chatMenu}'} #{'!{sectionSelection}'} #{'!{sectionView}'} 
