--- a/src/components/user/user.pug
+++ b/src/components/user/user.pug
@@ -1,5 +1,9 @@
 img.avatar(src='' alt='User avatar')
-h2.title__displayname #{'#{displayName}'}
+- const display = `#{displayName}`
+if (display == false)
+    h2.title__displayname= display 
+else 
+    h2.title__displayname #{'#{firstName}'}
 .userdata
     p.profile__subtitle E-mail  
     p #{'#{email}'}
@@ -9,8 +13,11 @@ h2.title__displayname #{'#{displayName}'}
     p #{'#{firstName}'}
     p.profile__subtitle Last name  
     p #{'#{secondName}'} 
-    p.profile__subtitle Display name  
-    p #{'#{displayName}'}
+    p.profile__subtitle Display name 
+    if (display == false) 
+        p= display
+    else
+        p #{'#{firstName}'}
     p.profile__subtitle Phone  
     p #{'#{phone}'}
 .form__btns #{`!{buttonMain}`} #{`!{buttonSecondary}`}
