--- a/public/main.scss
+++ b/public/main.scss
@@ -68,7 +68,7 @@ body {
     justify-content: center;
     width: 34rem;
     background-color: $form-color;
-    box-shadow: 0 0 6px rgba(0 0 0 / 14%);
+    box-shadow: 0 0 6px rgba(0 0 0 / 34%);
     border-radius: 1.2rem;
     padding: 3rem 3rem 2rem;
     gap: 3rem;
@@ -76,6 +76,12 @@ body {
 
 .form__title {
     font-size: 2rem;
+    font-weight: 500;
+    color: $main-text-color;
+}
+
+.form__title-s {
+    font-size: 1.5rem;
     font-weight: 500;
     color: $main-text-color;
 }
@@ -94,4 +100,29 @@ body {
     justify-content: flex-start;
     gap: 1.4rem;
     padding-top: 3rem;
+}
+
+// ICONS
+
+.btn__close-modal {
+    height: 2.4rem;
+    width: 2.4rem;
+    border: none;
+    background-color: inherit;
+}
+
+
+// HIDDEN 
+
+.hidden {
+    display: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // width: 70%;
+    z-index: 10;
 }
