--- a/src/components/chats/chats.scss
+++ b/src/components/chats/chats.scss
@@ -3,3 +3,14 @@
     grid-template-columns: 1fr 4fr;
     height: 100vh;
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(233, 233, 233, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+  }
