--- a/src/components/changePasswordForm/changePasswordForm.pug
+++ b/src/components/changePasswordForm/changePasswordForm.pug
@@ -1,4 +1,5 @@
 .btn__close-box #{`!{buttonClose}`}
 h3.form__title-s #{'#{title}'}
 form.form__inputs #{`!{inputOldPassword}`} #{`!{inputNewPassword1}`} #{`!{inputNewPassword2}`}
+    p.unvalid-text.unvalid.hidden.password-error Old password is incorrect!
     .form__btns #{`!{buttonMain}`}
