--- a/src/components/chatMenu/chatMenu.pug
+++ b/src/components/chatMenu/chatMenu.pug
@@ -1,6 +1,10 @@
 .btn__close-box #{`!{btnClose}`}
 .nav-userdata 
-    img.menu-avatar(src='' alt='User avatar')
+    - const avatarPath = `#{avatar}`
+    if (avatarPath)
+        img.menu-avatar(src=`https://ya-praktikum.tech/api/v2/resources/${avatarPath}` alt='User avatar')
+    else 
+        img.menu-avatar(src='' alt='User avatar')
     h2.title__displayname #{'#{displayName}'}
 ul.menu-list
     li.menu-item #{`!{btnProfile}`}
