--- a/src/components/chatMenu/chatMenu.scss
+++ b/src/components/chatMenu/chatMenu.scss
@@ -23,7 +23,10 @@ $primary-color: #eee;
     height: 8rem;    
     background-color: $primary-color;
     color: $primary-color;
+    background-image: url("../../../public/icon-profile.png");
     border-radius: 50%;
+    box-shadow: 0 0 6px rgba(0 0 0 / 34%);
+
 }
 
 .nav-userdata {
@@ -67,6 +70,3 @@ $primary-color: #eee;
     text-decoration: none;
 }
 
-.btn__chatmenu{
-
-}
