--- a/src/components/chatView/chatView.pug
+++ b/src/components/chatView/chatView.pug
@@ -2,6 +2,6 @@ nav.nav__chat-view
     .nav__user 
         img(src=`/${avatar}`)
         h3.nav__user-displayname #{displayName}
-    div  #{'!{buttonMore}'}
+    div  !{buttonMore}
 .chat-view 
-.send-msg-block #{'!{buttonFile}'} #{'!{input}'} #{'!{buttonSend}'}
+.send-msg-block !{buttonFile} !{input} !{buttonSend}
