--- a/src/components/modalForm/modalForm.pug
+++ b/src/components/modalForm/modalForm.pug
@@ -1,5 +1,5 @@
-.btn__close-box #{`!{buttonClose}`}
-h3.form__title-s #{'#{title}'}
-form.form__inputs.form-modal(name='#{formName}') #{`!{input}`}
-    p.unvalid-text.unvalid.hidden.modal-error #{'#{errorText}'}
-    .form__btns #{`!{buttonMain}`}
+.btn__close-box !{buttonClose}
+h3.form__title-s #{title}
+form.form__inputs.form-modal(name=`${formName}`) !{input}
+    p.unvalid-text.unvalid.hidden.modal-error #{errorText}
+    .form__btns !{buttonMain}
