--- a/src/components/chats/chats.pug
+++ b/src/components/chats/chats.pug
@@ -1,2 +1,2 @@
-.container__chats #{'!{chatMenu}'} #{'!{sectionSelection}'} #{'!{sectionView}'} 
+.container__chats !{chatMenu} !{sectionSelection} !{sectionEmpty} !{sectionView}
 .overlay.hidden
