--- a/src/components/inputBlock/inputBlock.pug
+++ b/src/components/inputBlock/inputBlock.pug
@@ -1,3 +1,3 @@
 label.form__label(for=`${forAttr}`) #{labelText}
-div #{`!{input}`}
+div !{input}
 p.unvalid-text.unvalid.nonvisible(class=`error-${forAttr}`) Incorrect format
