--- a/src/components/loginForm/loginForm.pug
+++ b/src/components/loginForm/loginForm.pug
@@ -1,4 +1,4 @@
-h2.form__title #{'#{title}'}
-form.form__inputs #{`!{inputLogin}`} #{`!{inputPassword}`}
-    .form__btns #{`!{buttonMain}`} #{`!{buttonSecondary}`}
+h2.form__title #{title}
+form.form__inputs !{inputLogin} !{inputPassword}
+    .form__btns !{buttonMain} !{buttonSecondary}
 
