--- a/src/components/chatSelection/chatSelection.scss
+++ b/src/components/chatSelection/chatSelection.scss
@@ -6,6 +6,7 @@ $main-text-color: #343a4f;
 
 .section__chat-selection {
     display: flex;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -56,4 +57,7 @@ $main-text-color: #343a4f;
     align-items: stretch;
     justify-content: flex-start;
     width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+
 }
