--- a/src/components/chats/chats.scss
+++ b/src/components/chats/chats.scss
@@ -1,6 +1,6 @@
 .container__chats {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 280px 1fr;
     height: 100vh;
 }
 
