--- a/src/components/message/message.pug
+++ b/src/components/message/message.pug
@@ -1,3 +1,3 @@
-div(class=`text-box-${msgType}`)
-    p.msg-text #{msgText} 
-        span.msg-date #{date}
+//- div(class=isMine ? 'text-box-mine' : 'text-box')
+p.msg-text #{content} 
+    span.msg-date #{date}
