--- a/src/components/chats/chats.scss
+++ b/src/components/chats/chats.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(233, 233, 233, 0.6);
+    background-color: rgba(233 233 233 / 60%);
     backdrop-filter: blur(3px);
     z-index: 5;
   }
