--- a/src/components/messageBlock/messageBlock.scss
+++ b/src/components/messageBlock/messageBlock.scss
@@ -18,6 +18,7 @@ $chats-border-color: #eaeaea;
 
 .chat-avatar {
     background-color: $search-input-color;
+    background-image: url("../../../public/icon-profile.png");
     height: 4.7rem;
     width: 4.7rem;
     border-radius: 50%;
